Add additional localized profile sections